# timer-sync

./: Cargo.toml  README.md
src/: client.rs  main.rs  msg.rs  server.rs
static/: index.html
