[package]
name = "timer-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
actix-files = "0.6"
actix-web-actors = "4.1.0"
lazy_static = "1.4.0"

tokio = "1.21.2"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"

env_logger = "0.9"
log = "0.4"

chrono = "0.4.22"

uuid = { version = "0.7", features = ["serde", "v4"] }
